package edu.hitsz.item;

public class FireSupply extends FlyingItem{
    public FireSupply(int locationX, int locationY, int speedX, int speedY, String type) {
        super(locationX, locationY, speedX, speedY, type);
    }
}
