@startuml
'https://plantuml.com/class-diagram
Factory<|--CureSupplyFactory
Factory<|--FireSupplyFactory
Factory<|--BombSupplyFactory
CureSupplyFactory-->CureSupply:Create
FireSupplyFactory-->FireSupply:Create
BombSupplyFactory-->BombSupply:Create
interface Factory{
    +CreateItem():
}
class CureSupplyFactory{
    +Create():FlyingItem
}
class FireSupplyFactory{
    +Create():FlyingItem
}
class BombSupplyFactory{
    +Create():FlyingItem
}
AbstractFlyingObject <|-- FlyingItem
abstract class FlyingItem{
    - type:String
    +forward():void
    + FlyingItem(int locationX, int locationY,int speedX, int speedY)

}
FlyingItem <|-- CureSupply
FlyingItem <|-- FireSupply
FlyingItem <|-- BombSupply
class CureSupply{
    -cureAmount:int
    +cure():void
}
class FireSupply{
    +fire():void
}
class BombSupply{
    +bomb():void
}
@enduml